--- a/download.html
+++ b/download.html
@@ -175,11 +175,11 @@ foo@bar:/CroMo_dataset/$ rm kitchen.tar.zst
                         Two full days of data-capture across all sensors (synchronised), for each of the four scene-types found in the paper (~50GB total). </p>
                     <p>
                         In order to make downloading easier, we divide the processed data into 4 files, one for each scene type.</br>
-                        Download link for Facades:  &nbsp[<a href="https://XXX" target="_blank">IceDrive</a>] </br>
-                        Download link for Park:  &nbsp[<a href="https://XXX" target="_blank">IceDrive</a>] </br>
-                        Download link for Kitchen:  &nbsp[<a href="https://XXX" target="_blank">IceDrive</a>] </br>
+                        Download link for Facades:  &nbsp[<a href="https://icedrive.net/s/z1z1Q7h1X1f94Xi3Zu3v3ky46i81" target="_blank">IceDrive</a>] </br>
+                        Download link for Park:  &nbsp[<a href="https://icedrive.net/s/f2R53Fz8k5V924zYCYhGz3aV65A1" target="_blank">IceDrive</a>] </br>
+                        Download link for Kitchen:  &nbsp[<a href="https://icedrive.net/s/Ryyv73Sa2X4WBW8vzxf8SbB9ZQVB" target="_blank">IceDrive</a>] </br>
                         <!-- Download link for Station:  &nbsp[<a href="https://XXX" target="_blank">IceDrive</a>] </br> -->
-                        Download link for Station:  &nbsp[<a href="https://icedrive.net/s/CtZSiNT8wXB5821zu84ThhWvx7XA" target="_blank">IceDrive</a>] </br> <!-- small -->
+                        Download link for Station:  &nbsp[<a href="https://icedrive.net/s/CtZSiNT8wXB5821zu84ThhWvx7XA" target="_blank">IceDrive</a>] </br>
                         Download link for all the IMU (some files are missing in the previous link):  &nbsp[<a href="https://icedrive.net/s/ftCkXhbVv8RGg248gzRXYQgBbTG9" target="_blank">IceDrive</a>] </br>
                     </p>
 
