--- a/download.html
+++ b/download.html
@@ -178,8 +178,8 @@ foo@bar:/CroMo_dataset/$ rm kitchen.tar.zst
                         Download link for Facades:  &nbsp[<a href="https://icedrive.net/s/z1z1Q7h1X1f94Xi3Zu3v3ky46i81" target="_blank">IceDrive</a>] </br>
                         Download link for Park:  &nbsp[<a href="https://icedrive.net/s/f2R53Fz8k5V924zYCYhGz3aV65A1" target="_blank">IceDrive</a>] </br>
                         Download link for Kitchen:  &nbsp[<a href="https://icedrive.net/s/Ryyv73Sa2X4WBW8vzxf8SbB9ZQVB" target="_blank">IceDrive</a>] </br>
-                        <!-- Download link for Station:  &nbsp[<a href="https://XXX" target="_blank">IceDrive</a>] </br> -->
-                        Download link for Station:  &nbsp[<a href="https://icedrive.net/s/CtZSiNT8wXB5821zu84ThhWvx7XA" target="_blank">IceDrive</a>] </br>
+                        Download link for Station:  &nbsp[<a href="https://icedrive.net/s/RhF24C893VuRvkvGYiN5QDyiwgXY" target="_blank">IceDrive</a>] </br>
+                        <!-- Download link for Station (small):  &nbsp[<a href="https://icedrive.net/s/CtZSiNT8wXB5821zu84ThhWvx7XA" target="_blank">IceDrive</a>] </br> -->
                         Download link for all the IMU (some files are missing in the previous link):  &nbsp[<a href="https://icedrive.net/s/ftCkXhbVv8RGg248gzRXYQgBbTG9" target="_blank">IceDrive</a>] </br>
                     </p>
 
