--- a/download.html
+++ b/download.html
@@ -172,7 +172,7 @@ foo@bar:/CroMo_dataset/$ rm kitchen.tar.zst
                     <span class="anchor" id="processed"></span>
                     <h3><b>Processed Data</b></h3>
                     <p class="fst-italic"> 
-                        Two full days of data-capture across all sensors (synchronised), for each of the four scene-types found in the paper (~50GB total). </p>
+                        Data-capture across all sensors (synchronised), for each of the four scene-types found in the paper (~220GB total). </p>
                     <p>
                         In order to make downloading easier, we divide the processed data into 4 files, one for each scene type.</br>
                         Download link for Facades:  &nbsp[<a href="https://icedrive.net/s/z1z1Q7h1X1f94Xi3Zu3v3ky46i81" target="_blank">IceDrive</a>] </br>
