--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
                     <p> 
                     - The CroMo dataset has been released! (2022/3/28)<br>
                     - The CroMo paper has been accepted at <a href="https://cvpr2022.thecvf.com/" target="_blank">CVPR 2022</a>! (2022/3/28)
+                    - The CroMo paper is on <a href="https://arxiv.org/abs/2203.12485" target="_blank">arxiv</a>! (2022/3/23)
                     </p> 
                     <div class="row aos-init aos-animate" data-aos="fade-up">
                         <div class="col-md-7 order-2 order-md-1 pt-5"> </div>                         
@@ -204,14 +205,14 @@
 
                     <h3><b>Citation</b></h3>
                     <pre style="text-align: left; white-space: pre; display: block; overflow-x: auto; padding: 0.5em; background: rgb(240, 240, 240); color: rgb(68, 68, 68);">
-@misc{han2021CroMo,
-    title={CroMo}, 
-    author={TODO},
-    year={2022},
-    eprint={XXX},
-    archivePrefix={arXiv},
-    primaryClass={cs.CV}
-} 
+@misc{verdié2022cromo,
+      title={CroMo: Cross-Modal Learning for Monocular Depth Estimation}, 
+      author={Yannick Verdié and Jifei Song and Barnabé Mas and Benjamin Busam and Aleš Leonardis and Steven McDonagh},
+      year={2022},
+      eprint={2203.12485},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
                 </pre>
                 </div>
             </section>
