--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@
                     
                     <h3><b>Annoucement</b></h3>
                     <p> 
+                    - The CroMo paper is on <a href="https://arxiv.org/abs/2203.12485" target="_blank">arxiv</a>! (2022/3/23)<br>
                     - The CroMo dataset has been released! (2022/3/28)<br>
                     - The CroMo paper has been accepted at <a href="https://cvpr2022.thecvf.com/" target="_blank">CVPR 2022</a>! (2022/3/28)
-                    - The CroMo paper is on <a href="https://arxiv.org/abs/2203.12485" target="_blank">arxiv</a>! (2022/3/23)
                     </p> 
                     <div class="row aos-init aos-animate" data-aos="fade-up">
                         <div class="col-md-7 order-2 order-md-1 pt-5"> </div>                         
