--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
     </style>  
     <body>
 
-        <div class="alert">
+<!--         <div class="alert">
             <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
             This website is under construction
         </div>
-
+ -->
 
         <!-- ======= Header ======= -->         
         <header id="header" class="fixed-top d-flex align-items-center "> 
@@ -194,8 +194,8 @@
                     </p>
 
                     <p> 
-                    <video class="center" width="640" src="https://user-images.githubusercontent.com/100925445/159143800-f3176f51-4c66-4c1b-9b84-558530f20602.mp4" 
-                    data-canonical-src="https://user-images.githubusercontent.com/100925445/159143800-f3176f51-4c66-4c1b-9b84-558530f20602.mp4"\
+                    <video class="center" width="640" src="https://user-images.githubusercontent.com/100925445/160245656-40e70a45-8cb3-4465-89a6-34130b2f054a.mp4" 
+                    data-canonical-src="https://user-images.githubusercontent.com/100925445/160245656-40e70a45-8cb3-4465-89a6-34130b2f054a.mp4"\
                     controls="controls" muted="muted" class="d-block rounded-bottom-2 width-fit" style="max-height:640px;">
                     </video>
                     </p> 
