--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   * License: https://bootstrapmade.com/license/
   ======================================================== -->         
     </head>   
-    <style>
+    <!--<style>
         /* The alert message box */
 .alert {
     padding: 20px;
@@ -62,7 +62,12 @@
     display: block
     }
 
-    </style>  
+    </style>  -->
+    <script>
+        AOS.init({
+            duration: 1200,
+          })
+      </script>
     <body>
 
 <!--         <div class="alert">
@@ -160,51 +165,44 @@
             </div>             
         </section>
         <!-- End Hero -->         
-        <main id="main"> 
-            <!-- ======= Services Section ======= -->             
-            <!-- End Services Section -->             
-            <!-- ======= Why Us Section ======= -->             
-            <!-- End Why Us Section -->             
-            <!-- ======= Features Section ======= -->             
+        <main id="main">          
             <section class="features"> 
                 <div class="container">
-                    <div class="row aos-init aos-animate" data-aos="fade-up"> </div>  
-                    
-                    <h3><b>Annoucement</b></h3>
-                    <p> 
-                    - The CroMo paper is on <a href="https://arxiv.org/abs/2203.12485" target="_blank">arxiv</a>! (2022/3/23)<br>
-                    - The CroMo dataset has been released! (2022/3/28)<br>
-                    - The CroMo paper has been accepted at <a href="https://cvpr2022.thecvf.com/" target="_blank">CVPR 2022</a>! (2022/3/28)
-                    </p> 
-                    <div class="row aos-init aos-animate" data-aos="fade-up">
-                        <div class="col-md-7 order-2 order-md-1 pt-5"> </div>                         
+                    <div data-aos="zoom-in" data-aos-anchor-placement="top-center" data-aos-duration="500" style="height:200px;">
+                        <h3><b>Annoucement</b></h3>
+                        <p> 
+                        - The CroMo paper is on <a href="https://arxiv.org/abs/2203.12485" target="_blank">arxiv</a>! (2022/3/23)<br>
+                        - The CroMo dataset has been released! (2022/3/28)<br>
+                        - The CroMo paper has been accepted at <a href="https://cvpr2022.thecvf.com/" target="_blank">CVPR 2022</a>! (2022/3/28)
+                        </p>              
                     </div>
 
-                    <h3><b>About</b></h3>
-                    <p> 
-                    We introduce a new large-scale dataset for depth estimation from multiple modalities. <b>CroMo</b> consists of synchronized stereo polarisation, indirect ToF, structured light depth and IMU measurements, captured at video rates. It contains large frame counts captured simultaneously by hardware synchronised sensors and will serve as a challenging benchmark for the depth estimation community.
-                    </p>
-                    <p>
-                    Learning-based depth estimation has witnessed recent progress in multiple directions; from self-supervision using monocular video to supervised methods offering highest accuracy. Complementary to supervision, further boosts to performance and robustness are gained by combining information from multiple signals. In this paper we systematically investigate key trade-offs associated with sensor and modality design choices as well as related model training strategies. Our study leads us to a new method, capable of connecting modality-specific advantages from polarisation, Time-of-Flight and structured-light inputs. We propose a novel pipeline capable of estimating depth from monocular polarisation for which we evaluate various training signals. The inversion of differentiable analytic models thereby connects scene geometry with polarisation and ToF signals and enables self-supervised and cross-modal learning.
-                    </p>
-                    <p> 
-                    In the absence of existing multimodal datasets, we examine our approach with a custom-made multi-modal camera rig and collect <b> CroMo </b>; the first dataset to consist of synchronized stereo polarisation, indirect ToF and structured-light depth, captured at video rates. Extensive experiments on challenging video scenes confirm both qualitative and quantitative pipeline advantages where we are able to outperform competitive monocular depth estimation methods.
-                    <p>
-                    If you have any questions about CroMo, please contact <a href = "mailto: yannick.verdie@huawei.com">yannick.verdie@huawei.com</a>  for further help.
-                    </p>
 
-                    <p> 
-                    <video class="center" width="640" src="https://user-images.githubusercontent.com/100925445/160245656-40e70a45-8cb3-4465-89a6-34130b2f054a.mp4" 
-                    data-canonical-src="https://user-images.githubusercontent.com/100925445/160245656-40e70a45-8cb3-4465-89a6-34130b2f054a.mp4"\
-                    controls="controls" muted="muted" class="d-block rounded-bottom-2 width-fit" style="max-height:640px;">
-                    </video>
-                    </p> 
-                    <div class="row aos-init aos-animate" data-aos="fade-up">
-                        <div class="col-md-7 order-2 order-md-1 pt-5"> </div>                         
+                    <div data-aos="zoom-in" data-aos-anchor-placement="top-center" data-aos-duration="500"  style="height:600px;">
+                        <h3><b>About</b></h3>
+                        <p> 
+                        We introduce a new large-scale dataset for depth estimation from multiple modalities. <b>CroMo</b> consists of synchronized stereo polarisation, indirect ToF, structured light depth and IMU measurements, captured at video rates. It contains large frame counts captured simultaneously by hardware synchronised sensors and will serve as a challenging benchmark for the depth estimation community.
+                        </p>
+                        <p>
+                        Learning-based depth estimation has witnessed recent progress in multiple directions; from self-supervision using monocular video to supervised methods offering highest accuracy. Complementary to supervision, further boosts to performance and robustness are gained by combining information from multiple signals. In this paper we systematically investigate key trade-offs associated with sensor and modality design choices as well as related model training strategies. Our study leads us to a new method, capable of connecting modality-specific advantages from polarisation, Time-of-Flight and structured-light inputs. We propose a novel pipeline capable of estimating depth from monocular polarisation for which we evaluate various training signals. The inversion of differentiable analytic models thereby connects scene geometry with polarisation and ToF signals and enables self-supervised and cross-modal learning.
+                        </p>
+                        <p> 
+                        In the absence of existing multimodal datasets, we examine our approach with a custom-made multi-modal camera rig and collect <b> CroMo </b>; the first dataset to consist of synchronized stereo polarisation, indirect ToF and structured-light depth, captured at video rates. Extensive experiments on challenging video scenes confirm both qualitative and quantitative pipeline advantages where we are able to outperform competitive monocular depth estimation methods.
+                        <p>
+                        If you have any questions about CroMo, please contact <a href = "mailto: yannick.verdie@huawei.com">yannick.verdie@huawei.com</a>  for further help.
+                        </p>
                     </div>
 
-                    <h3><b>Citation</b></h3>
-                    <pre style="text-align: left; white-space: pre; display: block; overflow-x: auto; padding: 0.5em; background: rgb(240, 240, 240); color: rgb(68, 68, 68);">
+                    <div   data-aos="zoom-in" data-aos-anchor-placement="top-center" data-aos-duration="500" style="height:500px">
+                        <h3><b>Video</b></h3>
+                        <video width="640" src="https://user-images.githubusercontent.com/100925445/160245656-40e70a45-8cb3-4465-89a6-34130b2f054a.mp4" 
+                        data-canonical-src="https://user-images.githubusercontent.com/100925445/160245656-40e70a45-8cb3-4465-89a6-34130b2f054a.mp4"\
+                        controls="controls" muted="muted" class="d-block rounded-bottom-2 width-fit" style="max-height:640px;display: block;margin: 0 auto;">
+                    </div>
+
+                    <div data-aos="zoom-in" data-aos-anchor-placement="top-center" data-aos-duration="500" style="height:300px;">
+                        <h3><b>Citation</b></h3>
+                        <pre style="text-align: left; white-space: pre; display: block; overflow-x: auto; padding: 0.5em; background: rgb(240, 240, 240); color: rgb(68, 68, 68);">
 @misc{verdié2022cromo,
       title={CroMo: Cross-Modal Learning for Monocular Depth Estimation}, 
       author={Yannick Verdié and Jifei Song and Barnabé Mas and Benjamin Busam and Aleš Leonardis and Steven McDonagh},
@@ -213,7 +211,8 @@
       archivePrefix={arXiv},
       primaryClass={cs.CV}
 }
-                </pre>
+                        </pre>
+                    </div>
                 </div>
             </section>
             <!-- End Features Section -->             
