--- a/index.html
+++ b/index.html
@@ -232,7 +232,10 @@
                     <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-bootstrap-template-corporate-moderna/ -->                     
                     Designed by 
                     <a href="https://bootstrapmade.com/">BootstrapMade</a> 
-                </div>                 
+                </div>   
+                <div class="credits"> 
+                <center><a href="https://livetrafficfeed.com/website-counter" data-time="America%2FNew_York" data-root="0" id="LTF_counter_href">Website Counter</a><script type="text/javascript" src="//cdn.livetrafficfeed.com/static/static-counter/live.v2.js"></script><noscript><a href="https://livetrafficfeed.com/website-counter">Website Counter</a></noscript></center>
+                </div>  
             </div>             
         </footer>
         <!-- End Footer -->         
